[package]
name = "rs-project"
version = "0.1.0"
authors = ["dp <displayphotogency@gmail.com>"]

[dependencies]
nalgebra = "0.13"
serde = "1.0.21"
serde_json = "1.0.6"
serde_derive = "1.0.21"
specs = "0.10"
specs-derive = "0.1.0"
rand = "0.3"
rayon = "0.7.1"
pushdown-automaton-macro = "0.1"

[dependencies.ggez]
git = "https://github.com/ggez/ggez.git"
features = ["cargo-resource-root"]

[features]
cargo-resource-root = []
